--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -55,6 +55,7 @@
 \DeclareRobustCommand{\F}[1]{\mathbb{F}^{#1}}
 \DeclareRobustCommand{\inv}[1]{{#1}^{-1}}
 
+\newcommand{\cardinality}{\abs}
 \newcommand*{\V}[1]{\vec{\bm{#1}}}
 \newcommand{\dotsuchthat}{\;\cdot\;}
 \newcommand{\suchthat}{\text{ s.t. }}
