--- a/Number Theory.tex
+++ b/Number Theory.tex
@@ -239,7 +239,7 @@
 			TODO
 		}
 		
-		\searchableSubsection{Absolute Value}{absolute value}{\bigskip
+		\searchableSubsection{Absolute Value}{number theory, absolute value}{\bigskip
 			\[ \vert{x}\vert \ge x, \vert{y}\vert \ge y	\implies \vert{x}\vert + \vert{y}\vert \ge x + y \]
 			\begin{align*}			
 				\vert{x + y}\vert =
@@ -279,6 +279,18 @@
 				&\iff &\vert{x}\vert - \vert{y}\vert &\leq \vert{x - y}\vert
 			\end{align*}
 			\end{proof}
+		}
+	
+		\pagebreak
+		\searchableSubsection{Complex Number}{number theory, complex numbers}{\bigskip
+			\boxeddefinition{The \textbf{modulus} of a complex number, $z = a + bi$, is the quantity defined as,
+				\[ \abs{z} = \sqrt{a^2 + b^2}. \]
+			}
+			\textcolor{red}{TODO: modulus is also called "absolute value" and can be calculated as product with conjugate}
+			The modulus obeys the following properties:
+			\begin{itemize}
+				\item{\abs{z_1z_2} = \abs{z_1}\abs{z_2}}
+			\end{itemize}
 		}
 		
 		
