Fixes:   - LinearAlgebraOfPolynomials was not displaying the images;   - Number Theory had some maths outside a math context.

--- a/Number Theory.tex
+++ b/Number Theory.tex
@@ -289,7 +289,7 @@
 			\textcolor{red}{TODO: modulus is also called "absolute value" and can be calculated as product with conjugate}
 			The modulus obeys the following properties:
 			\begin{itemize}
-				\item{\abs{z_1z_2} = \abs{z_1}\abs{z_2}}
+				\item{$ \abs{z_1z_2} = \abs{z_1}\abs{z_2} $}
 			\end{itemize}
 		}
 		
