--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -62,9 +62,15 @@
 \newcommand{\wrt}{w.r.t.\;}
 \newcommand{\notation}[1]{\noindent\fbox{%
 		\parbox{\textwidth}{%
-		        \textbf{Notation}: #1
+		        \textbf{Notation.} #1
 		    }%
 		}\bigskip
+}
+\newcommand{\nomenclature}[1]{\noindent\fbox{%
+		\parbox{\textwidth}{%
+			\textbf{Terminology.} #1
+		}%
+	}\bigskip
 }
 
 \newtheorem*{theorem}{Theorem}
