--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -54,12 +54,14 @@
 \DeclareRobustCommand{\Q}[1]{\mathbb{Q}^{#1}}
 \DeclareRobustCommand{\F}[1]{\mathbb{F}^{#1}}
 \DeclareRobustCommand{\inv}[1]{{#1}^{-1}}
+\DeclareRobustCommand{\logicsep}{\;.\;}
 
 \newcommand{\cardinality}{\abs}
 \newcommand*{\V}[1]{\vec{\bm{#1}}}
 \newcommand{\dotsuchthat}{\;\cdot\;}
 \newcommand{\suchthat}{\text{ s.t. }}
 \newcommand{\wrt}{w.r.t.\;}
+\newcommand{\WLOG}{w.l.o.g.\;}
 \newcommand{\notation}[1]{\noindent\fbox{%
 		\parbox{\textwidth}{%
 		        \textbf{Notation.} #1
